# ergast_rust

./: Cargo.toml  README.md
examples/: fetch.rs
src/: api.rs  ergast.rs  lib.rs  main.rs  models.rs  utils.rs
src/scripts/: health_check.rs
