[package]
name = "ergast_rust"
version = "0.1.0"
authors = ["yunaka354"]
description = "Collection of utilities to fetch data from amazing F1 dataset, the Ergast API."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
